fix: overflow caused by mobile widgets

--- a/src/routes/docs/+layout.style.module.scss
+++ b/src/routes/docs/+layout.style.module.scss
@@ -234,7 +234,7 @@ main {
     float: right;
     content: "";
     margin-top: -3.6rem;
-    margin-right: -1.75rem;
+    margin-right: -1.6rem;
     width: 8rem;
     height: 8rem;
     background-image: var(--widget-image);
